fixing password changed modal z-index issue

--- a/resultmanagement/src/main/resources/static/css/student-account.css
+++ b/resultmanagement/src/main/resources/static/css/student-account.css
@@ -55,3 +55,7 @@ body, html {
 	pointer-events: none;
 	opacity: 0.7;
 }
+
+#passwordChangedModal {
+	z-index: 99999 !important;
+}
